# fast-litellm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  Cargo.toml  FINAL_CLEAN_STRUCTURE.md  FINAL_PYPI_PACKAGE.md  LICENSE  MANIFEST.in  Makefile  README.md  build.rs  build.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  compatibility-tests.yml  publish.yml  release.yml
docs/: README.md  api.md  architecture.md  configuration.md  contributing.md  deployment.md  feature-flags.md  index.md  monitoring.md  project-structure.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/api/: reference.md
documentation/docs/development/: architecture.md  contributing.md
documentation/docs/getting-started/: installation.md
documentation/docs/guides/: proxy-integration.md  troubleshooting.md
documentation/docs/release-notes/: changelog.md  compatibility.md
examples/: basic_usage.py  benchmark.py  enhanced_usage.py  litellm_integration.py
fast_litellm/: __init__.py  __init__.pyi  enhanced_monkeypatch.py  feature_flags.py  performance_monitor.py
litellm-connection-pool/: Cargo.toml
litellm-connection-pool/src/: lib.rs
litellm-core/: Cargo.toml
litellm-core/src/: advanced_router.rs  lib.rs  tests.rs  token.rs
litellm-rate-limiter/: Cargo.toml
litellm-rate-limiter/src/: lib.rs
litellm-token/: Cargo.toml
litellm-token/src/: lib.rs
litellm_rust/: __init__.py  __init__.pyi  accelerator.py  diagnostics.py  enhanced_monkeypatch.py  feature_flags.json  feature_flags.py  monkeypatch.py  performance_monitor.py  rust_extensions.py
litellm_rust_accelerator/: FINAL_PROJECT_SUMMARY.md  README.md  install.sh  pyproject.toml  requirements.txt  test_installation.py
litellm_rust_accelerator/examples/: basic_usage.py
litellm_rust_accelerator/src/litellm_rust_accelerator/: __init__.py
litellm_rust_accelerator/tests/: test_litellm_rust_accelerator.py
scripts/: README.md  benchmark_before_after_shimming.py  benchmark_comprehensive_shimmed.py  benchmark_shimmed_performance.py  benchmark_token_counting.py  compare_performance.py  setup_dev.sh  test_package.py
src/: connection_pool.rs  core.rs  feature_flags.rs  lib.rs  performance_monitor.rs  pricing.rs  rate_limiter.rs  tokens.rs
tests/: benchmark_concurrency.py  benchmark_concurrent.py  benchmark_routing.py  comprehensive_integration_test.py  conftest.py  final_comprehensive_test.py  final_verification.py  investigate_threading_overhead.py  performance_diagnostic.py  realistic_benchmark.py  setup.py  simple_concurrent_test.py  test_accelerator.py  test_accuracy.py  test_advanced_router.py  test_api_compatibility.py  test_basic.py  test_caching_behavior.py  test_compilation.py  test_comprehensive.py  test_connection_pool_compilation.py  test_connection_pooling.py  test_core_functionality.py  test_diagnostics.py  test_final_verification.py  test_imports.py  test_integration.py  test_monkeypatching.py  test_package_structure.py  test_performance_benefits.py  test_performance_comparison.py  test_pyo3_optimizations.py  test_rust_acceleration.py  test_rust_code_paths.py  test_token_counting.py
tests/benchmarks/: benchmark_concurrent.py
