[workspace]
members = [
    "litellm-core",
    "litellm-token",
    "litellm-connection-pool",
    "litellm-rate-limiter",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
tiktoken-rs = "0.7.0"

[profile.release]
lto = true
codegen-units = 1
strip = true