[package]
name = "litellm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "litellm_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"