[package]
name = "litellm-rate-limiter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "litellm_rate_limiter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.8"
tiktoken-rs = "0.7.0"

[dev-dependencies]
tokio-test = "0.4"