[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-rust>=1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm-rust-accelerator"
version = "0.1.0"
description = "Optional Rust acceleration for performance-critical components of LiteLLM"
readme = "README.md"
authors = [{name = "LiteLLM Team", email = "team@litellm.ai"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
keywords = ["litellm", "rust", "acceleration", "performance", "ai", "llm"]
dependencies = [
    "pydantic>=1.9.0,<3.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://litellm.ai"
Repository = "https://github.com/BerriAI/litellm"
Documentation = "https://docs.litellm.ai"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-rust]
bindings = "PyO3"